# HiPC-2025-Paper253-Artifacts

./: LICENSE  README.md
batchscripts/haicgu/: batchscript.sh  sample64x16to3.ini
batchscripts/juwels/: batch16.sh  batch32.sh  sample128.ini  sample64x16to3.ini
batchscripts/ookami/: run128.sh  run16.sh  sample128.ini  sample64x16to3.ini
plot_script/: perf.py
plot_script/comm_info/: gmres_layout1  gmres_layout2  haicgu16  juwels16  juwels256  oe_layout1  oe_layout2  ookami128  ookami16
src/DDalphaAMG-Cpp-papi/: .gitlab-ci.yml  CMakeLists.txt  extensive_tests.sh  gdbrun
src/DDalphaAMG-Cpp-test_omp/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  main.sh  run
src/DDalphaAMG-Cpp-test_omp/dependencies/: install_dependencies_01.sh
src/DDalphaAMG-Cpp-test_omp/include/: DDalphaAMG.h  blas_vectorized.h  block_gmres_solve.h  block_jacobi_generic.h  classBlockSolver.h  classLevel.h  classSolver.h  coarsening_generic.h  data_generic.h  dirac.h  dirac_block_vpentry.h  dirac_block_vpsite.h  dirac_templated_generic.h  enums.h  gathering_generic.h  init.h  init_generic.h  interpolation_generic.h  lapackwrap_generic.h  linalg_generic.h  linsolve_generic.h  main.h  main_post_def_generic.h  oddeven_block.h  oddeven_generic.h  oddeven_generic_template.h  schwarz_generic.h  setup_generic.h  solver_analysis.h  sse_blas_vectorized.h  sse_coarse_operator.h  sse_coarse_operator_generic.h  sse_complex_double_intrinsic.h  sse_complex_float_intrinsic.h  sse_double_intrinsic.h  sse_linalg.h  sse_linalg_generic.h  top_level.h  vcycle_generic.h  vectorization_dirac_generic.h
src/DDalphaAMG-Cpp-test_omp/lib/: DDalphaAMG_interface.cpp  block_jacobi_generic.cpp  classLevel.cpp  classQR.cpp  coarsening_generic.cpp  lapackwrap_generic.cpp  lime_io.cpp  linsolve_generic.cpp  main.cpp  oddeven_generic.cpp  operator_generic.cpp  polyprec_generic.cpp  preconditioner.cpp  setup_generic.cpp  sse_linalg_generic.cpp  unit_testing.cpp  var_table.cpp  vcycle_generic.cpp
src/DDalphaAMG-Cpp-test_omp/tests/: test_blockGmres.cpp  test_classLevel.cpp  test_classLinAlgGeneric.cpp  test_diracOperator.cpp  test_oddeven.cpp
src/sme-experiments/: LICENSE.MIT  README.md  driver.cpp  fmop4a.cpp  fmopa.cpp  fmopa_mm3x3t3xN.cpp  mm3x3t3xN.cpp  mm3x3t3xN.hpp  mm3x3t3xN_sme.h  mm3x3t3xN_sme_nega_1xtile.cpp  mm3x3t3xN_sme_nega_8xtile.cpp  (+5 more)
(+66 files in other folders)
